templates/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: kuri-mysql
  namespace: kuri-namespace
  labels:
    app: kuri-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: kuri-mysql
    tier: mysql
  # clusterIP: None
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuri-mysql
  namespace: kuri-namespace
  labels:
    app: kuri-mysql
spec:
  selector:
    matchLabels:
      app: kuri-mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kuri-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
