templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-service
  # namespace: kuri-namespace
  labels:
    app: nginx-deployment
spec:
  selector:
    app: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
